ENV.update should not call block on existing keys

[Bug #16192]